fix spacing for mobile

--- a/src/resources/postcss/components/_events-bar.pcss
+++ b/src/resources/postcss/components/_events-bar.pcss
@@ -9,11 +9,13 @@
 	.tribe-events-c-events-bar {
 		display: flex;
 		flex-wrap: wrap;
+		margin-bottom: var(--spacer-4);
 		width: 100%;
 
 		@media (--viewport-medium) {
 			align-items: center;
 			flex-direction: row;
+			margin-bottom: var(--spacer-7);
 		}
 	}
 
