--- a/src/resources/postcss/components/_top-bar.pcss
+++ b/src/resources/postcss/components/_top-bar.pcss
@@ -11,8 +11,11 @@
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
-		margin-bottom: var(--spacer-5);
-		margin-top: var(--spacer-7);
+		margin-bottom: var(--spacer-2);
+
+		@media (--viewport-medium) {
+			margin-bottom: var(--spacer-5);
+		}
 	}
 
 	.tribe-events-c-top-bar__nav-wrapper {
@@ -34,7 +37,6 @@
 		display: block;
 
 		&:before {
-
 			@media (--viewport-medium) {
 				height: 18px;
 				width: 11px;
